@@ -1,3 +1,8 @@
+Mon May 13 17:32:25 2002  Jonathan Blandford  <jrb@redhat.com>
+
+	* gnome-keyboard-properties.c (delay_to_widget): hook up widget
+	correctly.
+
 2002-05-09  Jody Goldberg <jody@gnome.org>
 
 	* gnome-keyboard-properties.c (dialog_response) : support help.
